<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_reading"
        android:icon="@drawable/ic_reading"
        android:title="@string/reading" />

    <item
        android:id="@+id/nav_card_of_the_day"
        android:icon="@drawable/ic_today"
        android:title="@string/card_of_the_day" />

    <item
        android:id="@+id/nav_custom_spread"
        android:icon="@drawable/baseline_dashboard_customize_24"
        android:title="@string/custom_spread" />

    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_library"
        android:title="@string/view_all_cards" />

    <item
        android:id="@+id/nav_quiz"
        android:icon="@drawable/baseline_quiz_black_24"
        android:title="@string/quiz" />
</menu>