<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserSettingsActivity">

    <ImageView
        android:id="@+id/UserSettingsActivityLightCardImage"
        android:layout_width="120dp"
        android:layout_height="205dp"
        android:contentDescription="@string/light_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/UserSettingsActivityGoldCardImage"
        app:layout_constraintTop_toTopOf="@+id/UserSettingsActivityGoldCardImage"
        app:srcCompat="@drawable/cover_light" />

    <ImageView
        android:id="@+id/UserSettingsActivityGoldCardImage"
        android:layout_width="120dp"
        android:layout_height="205dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/gold_theme"
        app:layout_constraintEnd_toStartOf="@+id/UserSettingsActivityLightCardImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsCardTypeSpinner"
        app:srcCompat="@drawable/cover" />

    <Spinner
        android:id="@+id/UserSettingsCardTypeSpinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsActivitySpinnerLabel" />

    <TextView
        android:id="@+id/UserSettingsActivitySpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/select_card_style"
        app:layout_constraintStart_toStartOf="@+id/UserSettingsCardTypeSpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UserAttributesGoldImageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gold"
        app:layout_constraintEnd_toEndOf="@+id/UserSettingsActivityGoldCardImage"
        app:layout_constraintStart_toStartOf="@+id/UserSettingsActivityGoldCardImage"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsActivityGoldCardImage" />

    <TextView
        android:id="@+id/UserAttributesLightImageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/light"
        app:layout_constraintEnd_toEndOf="@+id/UserSettingsActivityLightCardImage"
        app:layout_constraintStart_toStartOf="@+id/UserSettingsActivityLightCardImage"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsActivityLightCardImage" />

    <Button
        android:id="@+id/UserSettingsActivitySaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/save_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserAttributesGoldImageLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>