<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3E0D7"
    tools:context=".activities.PastReadingsActivity">

    <TextView
        android:id="@+id/pastReadingsCardThreeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:text="@string/card_three"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/pastReadingsCardTwoLabel"
        app:layout_constraintStart_toEndOf="@+id/pastReadingsCardTwoLabel"
        app:layout_constraintTop_toTopOf="@+id/pastReadingsCardTwoLabel" />

    <TextView
        android:id="@+id/pastReadingsCardTwoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:text="@string/card_two"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/pastReadingsCardOneLabel"
        app:layout_constraintStart_toEndOf="@+id/pastReadingsCardOneLabel"
        app:layout_constraintTop_toTopOf="@+id/pastReadingsCardOneLabel" />

    <TextView
        android:id="@+id/pastReadingsCardOneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:text="@string/card_one"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/PastReadingsDateLabel"
        app:layout_constraintStart_toEndOf="@+id/PastReadingsDateLabel"
        app:layout_constraintTop_toTopOf="@+id/PastReadingsDateLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PastReadingsActivityRecyclerView"
        android:layout_width="409dp"
        android:layout_height="540dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/PastReadingsDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/date"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/PastReadingsActivityRecyclerView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/PastReadingsActivityMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/my_past_readings"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>